--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   },
   "require-dev" :{
     "symfony/console": "2.6.7",
-    "symfony/filesystem": "^v5.1.2",
+    "symfony/filesystem": "^v5.1.2"
   },
   "autoload": {
     "psr-4": {
